<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.calorietracker.ui.fragments.HomeFragment">

    <data>
        <variable
            name="homeViewModal"
            type="com.example.android.calorietracker.ui.viewModels.HomeViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- CIRCULAR PROGRESS BAR: https://stackoverflow.com/a/37160724 -->
            <ProgressBar
                android:id="@+id/circle_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="@{homeViewModal.goal}"
                android:progress="@{homeViewModal.currentCalories}"
                android:progressDrawable="@drawable/circular"
                android:secondaryProgress="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentage_text"
                android:layout_width="250dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@{@string/percentage_format(homeViewModal.percentage)}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/divide_format(homeViewModal.currentCalories, homeViewModal.goal)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/circle_progressbar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/entry_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circle_progressbar"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:layout_editor_absoluteX="112dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_black_24dp"
            tools:ignore="VectorDrawableCompat" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>