<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <EditText
        android:id="@+id/dialog_entry_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entry_name" />

    <EditText
        android:id="@+id/dialog_entry_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/calorie_amount"
        android:inputType="numberSigned" />

</LinearLayout>