<resources>
    <string name="app_name">calorietracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="percentage_format">%d%%</string>
    <string name="divide_format">%d / %d</string>
    <string name="amount_calories_format">%s cal</string>

    <string name="card_title"><![CDATA[<b>Name:</b>]]></string>
    <string name="card_amount"><![CDATA[<b>Amount:</b>]]></string>

    <!-- Toast to play on snackbar events -->
    <string name="cleared_message">Removed all entries from today!</string>
    <string name="edit_text">Edit</string>
    <string name="remove_text">remove</string>
    <string name="header_text">Today\'s log</string>
    <string name="search_hint">Search</string>
    <string name="app_label">Calorie Tracker</string>
    <string name="add_calories_text">add calories</string>
    <string name="clear_entries_text">Clear today\'s log</string>
    <string name="how_long">To burn those calories</string>
    <string name="calorie_amount">Calorie amount</string>
    <string name="entry_name">Entry name</string>

    <string name="alert_ok_text">OK</string>
    <string name="alert_cancel_text">Cancel</string>
    <string name="alert_search_text">Where do you want to search?</string>
    <string name="alert_add_title_text">Manually add an entry</string>
    <string name="alert_error_title_text">Product detail error!</string>
    <string name="alert_error_message_text">This entry was manually added and does not contain detailed information.</string>
</resources>
